[package]
name = "yrust_chain"
version = "0.2.0"
edition = "2021"
authors = ["YRust Team"]
description = "AI驱动的智能公链 - AI Powered Smart Blockchain"
license = "MIT"
repository = "https://github.com/ychech/YC-Rust"

[dependencies]
# 异步运行时
tokio = { version = "1.38.0", features = ["full"] }

# Web 框架 - 区块浏览器 API
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }

# 序列化
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

# 哈希算法
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4.3"

# 加密 - 钱包/签名
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "recovery"] }
rand = "0.8.5"
ripemd = "0.1.3"
bs58 = "0.5.1"

# P2P 网络 - 工业级 libp2p
libp2p = { version = "0.54.1", features = ["tcp", "tls", "dns", "tokio", "noise", "yamux", "websocket", "ping", "mdns", "kad", "gossipsub", "request-response", "json", "macros", "quic"] }

# 数据持久化
rocksdb = { version = "0.22.0", optional = true }
sled = "0.34.7"

# 时间
chrono = "0.4.38"

# 工具库
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
log = "0.4.21"
env_logger = "0.11.3"
bytes = "1.6.0"
futures = "0.3.30"
async-trait = "0.1.80"
crossbeam-channel = "0.5.13"
once_cell = "1.19.0"

# AI 集成
reqwest = { version = "0.12", features = ["json"], optional = true }

# WASM 智能合约引擎 (简化版)
wasmtime = "22.0.0"
wat = "1.209.1"

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = []
persistent = ["rocksdb"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
